@@ -4,8 +4,6 @@ source "${DOTFILES}/scripts/core/main.sh"
 source "${DOTFILES}/scripts/core/log.sh"
 source "${DOTFILES}/scripts/core/git.sh"
 
-git_pager=$(git config core.pager || echo 'less')
-
 export GIT_GI_REPO_REMOTE=${GIT_GI_REPO_REMOTE:-https://github.com/dvcs/gitignore}
 export GIT_GI_REPO_LOCAL=${GIT_GI_REPO_LOCAL:-"${HOME}/.git/gi/repos/dvcs/gitignore"}
 export GIT_GI_TEMPLATES=${GIT_GI_TEMPLATES:-"${GIT_GI_REPO_LOCAL}/templates"}
