@@ -1,4 +1,5 @@
 #!/usr/bin/env bash
+# shellcheck disable=SC2046,SC2015,SC1090,SC1091,SC2034,SC2012,SC2207,SC1090,SC201
 
 source "${DOTFILES}/scripts/core/main.sh"
 
@@ -34,7 +35,8 @@ _stash() {
 }
 
 _file() {
-   local files="$(git ls-files "$@")"
+   local files
+   files="$(git ls-files "$@")"
    local -r green="$(printf '\033[32m')"
    local -r reset="$(printf '\033[0m')"
 
