@@ -1,4 +1,5 @@
-# vim: ft=sh
+#!/usr/bin/env bash
+
 # Local variables                                                           {{{
 # -----------------------------------------------------------------------------
 
@@ -101,7 +102,7 @@ __confirm() { #{{{
 
    echo -n "$@($YN)> "
    read confirm
-   confirm=$(echo $confirm | tr '[:upper:]' '[:lower:]')
+   confirm=$(echo "$confirm" | tr '[:upper:]' '[:lower:]')
    case $confirm in
       y|yes) return 0 ;;
       n|no) return 1 ;;
@@ -119,7 +120,7 @@ __confirm() { #{{{
 } #}}}
 
 prmpt() { #{{{
-   echo "${tp_bold}$(tput setaf $1)$2${tp_reset} "
+   echo "${tp_bold}$(tput setaf "$1")$2${tp_reset} "
 } #}}}
 
 bd_() { #{{{
@@ -136,7 +137,7 @@ grn_() { #{{{
 
 cleanup_namespace() { #{{{
    unset -f dotbundle get_fullpath path_without_home path_without_dotdir
-   unset -f __confirm prmpt bd_ grn_ rd_ dot_usage parse_linkfiles $0
+   unset -f __confirm prmpt bd_ grn_ rd_ dot_usage parse_linkfiles "$0"
 } #}}}
 
 parse_linkfiles() { # {{{
@@ -151,10 +152,10 @@ parse_linkfiles() { # {{{
       echo "$(prmpt 4 "Loading ${linkfile} ...")"
       for l in $(grep -Ev '^\s*#|^\s*$' "${linkfile}"); do
          # extract environment variables
-         dotfile="$(echo $l | cut -d, -f1)"
-         dotfile="$(eval echo ${dotfile})"
-         orig="$(echo $l | cut -d, -f2)"
-         orig="$(eval echo ${orig})"
+         dotfile="$(echo "$l" | cut -d, -f1)"
+         dotfile="$(eval echo "${dotfile}")"
+         orig="$(echo "$l" | cut -d, -f2)"
+         orig="$(eval echo "${orig}")"
 
          # path completion
          [ "${dotfile:0:1}" = "/" ] || dotfile="${dotdir}/$dotfile"
