@@ -1,8 +1,9 @@
-# vim: ft=sh
+#!/usr/bin/env bash
+
 dot_config() {
    # init
    if [ ! -e "${dotrc}" ]; then
-      echo "$(prmpt 1 error)$(bd_ ${dotrc}) doesn't exist."
+      echo "$(prmpt 1 error)$(bd_ "${dotrc}") doesn't exist."
       if __confirm y "make configuration file ? "; then
          printf "mkdir -p ${dotrc//dotrc} ... "
          mkdir -p "${dotrc//dotrc}"
@@ -17,12 +18,12 @@ dot_config() {
 
    # open dotrc file
    if [ ! "${dot_edit_default_editor}" = "" ];then
-      eval ${dot_edit_default_editor} "${dotrc}"
+      eval "${dot_edit_default_editor}" "${dotrc}"
    elif hash "$EDITOR"; then
       $EDITOR "${dotrc}"
    else
       xdg-open "${dotrc}"
    fi
 
-   unset -f $0
+   unset -f "$0"
 }
