@@ -1,8 +1,9 @@
-# vim: ft=sh
+#!/usr/bin/env bash
+
 dot_edit() {
    # init
    if [ ! -e "${dotlink}" ]; then
-      echo "$(prmpt 1 empty)$(bd_ ${dotlink})"
+      echo "$(prmpt 1 empty)$(bd_ "${dotlink}")"
       if __confirm y "make dotlink file ? " ; then
          echo "cp ${DOT_SCRIPT_ROOTDIR}/examples/dotlink ${dotlink}"
          cp "${DOT_SCRIPT_ROOTDIR}/examples/dotlink" "${dotlink}"
@@ -13,12 +14,12 @@ dot_edit() {
 
    # open dotlink file
    if [ -n "${dot_edit_default_editor}" ];then
-      eval ${dot_edit_default_editor} "${dotlink}"
+      eval "${dot_edit_default_editor}" "${dotlink}"
    elif hash "$EDITOR" 2>/dev/null; then
       $EDITOR "${dotlink}"
    else
       xdg-open "${dotlink}"
    fi
 
-   unset -f $0
+   unset -f "$0"
 }
