@@ -1,11 +1,12 @@
-# vim: ft=sh
+#!/usr/bin/env bash
+
 dot_pull() {
    if [ "$1" = "--self" ]; then
       echo $(prmpt 4 "Update dot")
       git -C "${DOT_SCRIPT_ROOTDIR}" pull
    else
       # git pull
-      echo "$(prmpt 4 "Update dotfiles")git -C "${dotdir}" pull"
+      echo "$(prmpt 4 "Update dotfiles")git -C ""${dotdir}"" pull"
       git -C "${dotdir}" pull
       if ${dotpull_update_submodule} && test -s "${dotdir}/.gitmodules"; then
          echo "$(prmpt 4 "Update the submodules ...")"
@@ -14,5 +15,5 @@ dot_pull() {
       fi
    fi
 
-   unset -f $0
+   unset -f "$0"
 }
