@@ -1,5 +1,4 @@
 #!/usr/bin/env bash
-# shellcheck disable=SC2004,SC2015,SC2155,SC2206,SC2016,SC2220,SC2162,SC2155
 set -eo pipefail
 
 source "${DOTFILES}/scripts/core/main.sh"
