@@ -35,9 +35,11 @@ dot_or_args() {
    readonly fn="${@:1:$((dash_index-1))}"
    shift "$dash_index"
    if [[ $# -lt 1 ]]; then
-      "${fn[@]}" .
+      # shellcheck disable=SC2068
+      ${fn[@]} .
    else
-      "${fn[@]}" "$@"
+      # shellcheck disable=SC2068
+      ${fn[@]} "$@"
    fi
 }
 
