@@ -1,4 +1,5 @@
 #!/usr/bin/env bash
+# shellcheck disable=SC2046,SC2015,SC1090,SC1091,SC2034,SC2012,SC2207,SC1090,SC201
 set -euo pipefail
 
 export DOTFILES="${DOTFILES:-$HOME/dotfiles}"
@@ -58,7 +59,7 @@ if ! _has sudo; then
 fi
 
 clone_repo() {
-   if !has git; then
+   if ! has git; then
       _install_git &>/dev/null
    fi
    git clone "$REPO" "$DOTFILES" --depth 1
