@@ -2,27 +2,68 @@
 set -euo pipefail
 
 source "${DOTFILES}/scripts/core/main.sh"
+source "${DOTFILES}/scripts/core/log.sh"
 
 ##? Shellcheck
 ##?
 ##? Usage:
-##?    shellcheck
+##?    shellcheck ls [--all]
+##?    shellcheck check <file>
+##?    shellcheck fix
 
 doc::parse "$@"
 
-_files() {
-   find "${DOTFILES}/scripts/core" -maxdepth 4 -iname "*.sh" -type f
-   find "${DOTFILES}/tests" -maxdepth 4 -iname "*.sh" -type f
-   find "${DOTFILES}/bin" -maxdepth 2 -executable -type f
+_files0() {
+   cd "$DOTFILES" || exit
+   find "./bin" -maxdepth 2 -executable -type f
+   find "./scripts" -maxdepth 2 -executable -type f
+   find "." -maxdepth 5 -iname "*.sh" -type f
 }
 
-main() {
-   local errors=0
-   for f in $(_files); do
-      shellcheck -x -e SC2154 "$f" || errors=$((errors+1))
+_files() {
+   _files0 | sort -u
+}
+
+_filtered_files() {
+   _files \
+      | grep -v 'scripts/link/aux' \
+      | grep -v 'scripts/rice' \
+      | grep -v 'scripts/package' \
+      | grep -v 'docopt' \
+      | grep -v '.py'
+}
+
+_fix_one() {
+   log::warn "$1"
+   shellcheck -x -f diff "$(realpath "$1")" \
+      | sed "s|${DOTFILES}|.|g" \
+      | sed 's|././tests|./tests|g' \
+      | git apply
+}
+
+_fix() {
+   for f in $(_files); do 
+      _fix_one "$f" || true
    done
-   return $errors
+}
+
+_shellcheck() {
+   shellcheck -x \
+      -e SC2154 \
+      -e SC2119 \
+      -e SC2002 \
+      -e SC2096 \
+      "$@"
 }
 
 cd "$DOTFILES" || exit
-main "$@"
+
+if $ls && $all; then
+   _files
+elif $ls && ! $all; then
+   _filtered_files
+elif $check; then
+   _shellcheck "$file"
+elif $fix; then
+   _fix
+fi
