@@ -1,4 +1,5 @@
 #!/usr/bin/env bash
+# shellcheck disable=SC2046,SC2015,SC1090,SC1091,SC2034,SC2012,SC2207,SC1090,SC201
 set -euo pipefail
 
 source "${DOTFILES}/scripts/core/main.sh"
